removing spaces in file title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Register Student</title>
+    <title>Register_Student</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
