--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="menu">
     <ul>
-        <li><a href="students.php">List Students</a></li>
+        <li><a href="students.php">List_Students</a></li>
     </ul>
 </div>
 
